fix: The sign in button is not visible if the device is in landscape mode

--- a/src/components/header/dimensions/mobile/MobileView.scss
+++ b/src/components/header/dimensions/mobile/MobileView.scss
@@ -289,8 +289,7 @@
     right: 0;
     top: 79px;
     width: 100%;
-    height: auto !important;
-    max-height: calc(100vh - 88px);
+    max-height: 400px;
     overflow-y: auto;
     padding: 0 20px 20px;
     background-color: $white;
@@ -500,6 +499,9 @@
           width: 100%;
         }
       }
+    }
+    @media (max-height: 400px) {
+      max-height: calc(100vh - 80px);
     }
   }
   .wallet__connected__tablet {
